--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <h1>Index</h1>
     <ul>
-        <li><a href="css_html.md">1. Insertar CSS3 amb HTML</a></li>
-        <li><a href="sintaxis.md">2. Sintaxis bàsica de CSS3</a></li>
-        <li><a href="selectors.md">3. Selectors en CSS3</a></li>
-        <li><a href="exemple.md">Exemple amb sintaxi bàsica i selectors</a></li>
-        <li><a href="modelCaixes.md">4. Model de caixes</a></li>
-        <li><a href="flexBoxGrid.md">5. Layouts amb Flexbox i Grid</a></li>
+        <li><a href="css_html">1. Insertar CSS3 amb HTML</a></li>
+        <li><a href="sintaxis">2. Sintaxis bàsica de CSS3</a></li>
+        <li><a href="selectors">3. Selectors en CSS3</a></li>
+        <li><a href="exemple">Exemple amb sintaxi bàsica i selectors</a></li>
+        <li><a href="modelCaixes">4. Model de caixes</a></li>
+        <li><a href="flexBoxGrid">5. Layouts amb Flexbox i Grid</a></li>
     </ul>
 
 </body>
