--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="selectors">3. Selectors en CSS3</a></li>
         <li><a href="exemple">Exemple amb sintaxi bàsica i selectors</a></li>
         <li><a href="modelCaixes">4. Model de caixes</a></li>
-        <li><a href="flexBoxGrid">5. Layouts amb Flexbox i Grid</a></li>
+        <li><a href="flexBoxgrid">5. Layouts amb Flexbox i Grid</a></li>
     </ul>
 
 </body>
